[package]
name = "aoba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
tonic = "0.11.0"
prost = "0.12.3"
anyhow = "1.0.81"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["sync", "fs"] }
cuid2 = "0.1.2"
log = "0.4.21"

[build-dependencies]
tonic-build = "0.11.0"